@@ -1,3 +1,10 @@
+2001-12-05  Tambet Ingo  <tambet@ximian.com>
+
+	* font.pl.in: Removed big chunks of old code.
+	(x_add_font): Fixed a bug which prevented
+	installing truetype fonts.
+	(xfs_add_fontpath): Implement.
+
 2001-12-04  Tambet Ingo  <tambet@ximian.com>
 
 	* Makefile.am (EXTRA_DIST): Added type1inst to build.
